refactored sound positioning to method on track, fixed map image alignment issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -129,8 +129,8 @@ filter: alpha(opacity=20); /* internet explorer */
 -moz-opacity: 0.20;       /* mozilla, netscape */
 opacity: 0.20;           /* fx, safari, opera */
 }
-#map { display: none; height: 100%; width: 100%; position: fixed; left: 0; bottom: 0; z-index: 7000; background-color: #000; text-align: center; overflow: scroll; margin-bottom: 50px; }
-
+#map { display: none; height: 100%; width: 100%; position: fixed; left: 0; bottom: 0; z-index: 7000; background-color: #000; text-align: center; overflow: scroll; }
+#map .wrapper { margin: 0 auto; position: relative; padding-bottom: 66px; }
 #map svg { position: absolute; top: 0; left: 0; height: 100%; }
 #map svg polygon { fill-opacity: 0; }
 #map svg polygon:hover { fill-opacity: 0.14; cursor: pointer; }
